# wasm-jug

./: .devcontainer.json  LICENSE  README.md  package-lock.json
00-wasm-1st-steps/: .editorconfig  SLIDES.md  go.work  package-lock.json
00-wasm-1st-steps/00-wasm-c/: README.md  index.html  main.c  main.wasm
00-wasm-1st-steps/01-wasm-go/: index.html  main.go  main.wasm
00-wasm-1st-steps/02-wasm-go/: index.html  main.go  main.wasm  tinygo.build.sh
01-wasm-2nd-steps/: README.md  SLIDES.md  deck.sh  go.work  package-lock.json  reset.sh
01-wasm-2nd-steps/03-wasm-go/: go.mod  index.html  main.go  tinygo.build.sh
02-wasm-go-js/: .editorconfig  .gitignore  README.md  SLIDES.md  go.work
02-wasm-go-js/07-dom/: go.mod  index.html  (+1 more)
03-wasm-rust/: .gitignore  README.md  SLIDES.md  package-lock.json  reset.sh
03-wasm-rust/03-hello-dom/: Cargo.toml  index.html
03-wasm-rust/03-hello-dom/src/: lib.rs
04-wasi-intro/: 01-hello-rust.md  02-hello-go.md  03-hello-swift.md  README.md  SLIDES.md  go.work
05-wasi-wazero/: README.md  SLIDES.md  go.work  go.work.sum
06-wasi-extism/: README.md  SLIDES.md  go.work  go.work.sum
07-cracker/: 0-run-java-go-demo.sh  1-run-java-rust-demo.sh  SLIDES.md  build.sh  run-go-wasm.sh
08-chicory-demo/: .env  0-run-java-go-demo.sh  1-call-function.sh  SLIDES.md  pom.xml
09-extism-ai-function-calling/: SLIDES.md  deck.sh
10-spin-framework/: README.md  stress.sh
cracker/: .env  0-run-java-go-demo.sh  1-run-java-rust-demo.sh  2-call-functions.sh  3-functions-list.sh  4-kill-functions.sh  pom.xml  stress.sh
tmp/: MainVerticle.java
(+128 files in other folders)
