[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"
wasm-bindgen = "0.2.88"
web-sys = { version = "0.3.65", features = ["Document", "Element", "HtmlElement", "Node", "Window"] }

[lib]
name = "hello"
path = "src/lib.rs"
crate-type =["cdylib"]
